ApexTrailhead/force-app/main/default/objects/UnitResponse__c/UnitResponse__c.object-meta.xml
<CustomObject>
    <label>Unit Response</label>
    <nameField>
        <label>Unit Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units Response</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>