ApexTrailhead/force-app/main/default/objects/UnitResponse__c/fields/ModuleResponse__c.field-meta.xml
<CustomField>
    <fullName>ModuleResponse__c</fullName>
    <label>Module Response</label>
    <referenceTo>ModuleResponse__c</referenceTo>
    <relationshipLabel>Units Response</relationshipLabel>
    <relationshipName>Units_Response</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>