ApexTrailhead/force-app/main/default/objects/UnitResponse__c/fields/NumberOfTries__c.field-meta.xml
<CustomField>
    <fullName>NumberOfTries__c</fullName>
    <label>Number Of Tries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>