ApexTrailhead/force-app/main/default/objects/UnitResponse__c/fields/UnitCompleted__c.field-meta.xml
<CustomField>
    <fullName>UnitCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Completed</label>
    <type>Checkbox</type>
</CustomField>